# to_do

./: pyproject.toml
advanced_func/: admin.py  apps.py  models.py
advanced_func/migrations/: 0001_initial.py
config/: drf_yasg_url.py  settings.py  urls.py
static/assets/css/: main.css
tasks/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_options.py  0003_task_user.py  0004_alter_task_user.py  0005_alter_task_user.py  0006_task_is_private.py  0007_alter_task_is_completed.py  0008_alter_task_options_alter_task_created_at_and_more.py  0009_alter_task_is_private.py
templates/: index.html
templates/pages/: index.html  task_detail.html
templates/registration/: login.html  register.html
templates/tasks/: base.html  list.html
users/: serializers.py  urls.py  views.py
